--- a/responsive_images/responsive.html
+++ b/responsive_images/responsive.html
@@ -10,11 +10,10 @@
 <h1>Responsive Example</h1>
 
   <img src="/images/image_original.jpg"
-        srcset="/images/image_large.jpg 4000w,
-                /images/image_original.jpg 3504w,
-                /images/image_medium.jpg 3000w,
-                /images/image_small.jpg 2000w">
-  
+        srcset="/images/image_original.jpg 3504w,
+                /images/image_large.jpg 3000w,
+                /images/image_medium.jpg 2000w,
+                /images/image_small.jpg 1000w">
 </body>
 </html>
 
